cabal-version:      2.4
name:               tonnetz-haskell-graph
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Snavely
maintainer:         ludflu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tonnetz-haskell-graph
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    other-modules:    WriteRunDot
    build-depends:    base ^>=4.16.4.0
                     ,containers
                     ,hashable
                     ,text
                     ,graphviz
                     ,fgl
                     ,filepath
                     ,matrix
    hs-source-dirs:   app
    default-language: Haskell2010
